--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "input-otp": "1.2.4",
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.5.2",
+    "moment-timezone": "^0.5.45",
     "negotiator": "0.6.3",
     "next": "14.2.5",
     "next-auth": "4.24.7",
